--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
+        "@commitlint/cli": "^7.5.2",
+        "@commitlint/config-conventional": "^7.5.0",
         "@types/bytes": "^3.0.0",
         "@types/fs-extra": "^5.0.5",
         "@types/lodash": "^4.14.121",
@@ -72,6 +74,7 @@
         "gulp": "^4.0.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-typescript": "^5.0.0",
+        "husky": "^1.3.1",
         "tslint": "^5.13.0",
         "typescript": "^3.3.3333",
         "vsce": "^1.57.1",
@@ -88,5 +91,10 @@
         "ssh2": "^0.8.2",
         "ssh2-streams": "^0.4.2",
         "vscode-nls": "^4.0.0"
+    },
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
     }
 }
