--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "onCommand:sftp.openFolder",
         "onCommand:sftp.addFolder",
         "onCommand:sftp.openFile",
+        "onCommand:sftp.download",
+        "onCommand:sftp.upload",
         "onCommand:sftp.removeConfig",
         "onCommand:sftp.help",
         "onFileSystem:sftp"
@@ -40,6 +42,16 @@
             {
                 "command": "sftp.openFile",
                 "title": "%sftp.openFile.title%",
+                "category": "SFTP"
+            },
+            {
+                "command": "sftp.download",
+                "title": "%sftp.download.title%",
+                "category": "SFTP"
+            },
+            {
+                "command": "sftp.upload",
+                "title": "%sftp.upload.title%",
                 "category": "SFTP"
             },
             {
@@ -73,6 +85,7 @@
         "@types/lodash": "^4.14.121",
         "@types/multimatch": "^2.1.3",
         "@types/node": "^11.9.5",
+        "@types/opn": "^5.1.0",
         "@types/p-event": "^1.3.0",
         "@types/ssh2": "^0.5.38",
         "@types/ssh2-streams": "^0.1.5",
@@ -93,6 +106,7 @@
         "fs-extra": "^7.0.1",
         "lodash": "^4.17.11",
         "multimatch": "^3.0.0",
+        "opn": "^5.4.0",
         "p-event": "^2.3.1",
         "ssh2": "^0.8.2",
         "ssh2-streams": "^0.4.2",
