--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "vscode-sftp",
     "displayName": "VS Code SFTP",
-    "description": "SFTP File System for VS Code.",
-    "version": "1.0.0",
+    "description": "Edit remote Linux files directly in VS Code.",
+    "version": "1.1.0",
     "publisher": "suntobright",
     "repository": {
         "type": "git",
